--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       <div class="pro-container">
         <div class="project-container">
           <div class="project-box">
-            <img src="images/1.jpg" alt="image1" />
+            <img src="images/CCS.png" alt="image1" />
             <div class="projects-layer">
               
               <h4>Crypto Cloud Storage</h4>
