--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@
 
         <div class="checkpoint">
           <div>
-            <h2 class="role"><span>Technical Support Executive</span></h2>
-            <h3 class="company">Star Computers, Dharmapuri.</h3>
-            <h3 class="year">Jan 2021 - Jun 2022</h3>
+            <h2 class="role"><span>System Service Engineer</span></h2>
+            <h3 class="company">Excel Technologies, Salem.</h3>
+            <h3 class="year">Jan 2021 - Dec 2021</h3>
             <p class="ex-skills">
               <span>Skills :</span>
               <ul>
