Changed the Designation

--- a/index.html
+++ b/index.html
@@ -187,6 +187,30 @@
       <h2 class="heading">Experience</h2>        
 
       <div class="ex-timeline">
+       
+        <div class="checkpoint">
+          <div>
+            <h2 class="role"><span>System Admin</span></h2>
+            <h3 class="company">
+              Derivative IT Services Private Limited, Bangalore.
+            </h3>
+            <h3 class="year">Jul 2024 - Present</h3>
+            <p class="ex-skills">
+              <span>Skills :</span>
+              <ul>
+                <li>Office 365</li>
+                <li>Active Directory</li>
+                <li>Network Setup and Troubleshooting</li>
+                <li>Software Updates and Patches</li>
+                <li>Security Configuration</li>
+                <li>Remote Assistance</li>
+                <li>Troubleshooting</li>
+                <li>System Configaration</li>                
+              </ul>
+            </p>
+          </div>
+        </div>
+
         <div class="checkpoint">
           <div>
             <h2 class="role"><span>Technical Support Executive</span></h2>
@@ -213,8 +237,8 @@
         <div class="checkpoint">
           <div>
             <h2 class="role"><span>System Service Engineer</span></h2>
-            <h3 class="company">Excel Technologies, Salem.</h3>
-            <h3 class="year">Jan 2021 - Dec 2021</h3>
+            <h3 class="company">Star Computers, Dharmapuri.</h3>
+            <h3 class="year">Jan 2021 - Jun 2022</h3>
             <p class="ex-skills">
               <span>Skills :</span>
               <ul>
