--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h1>Kalimuthu M</h1>
         <h3>a <span class="multiple-text"></span></h3>
         <p>
-          Adaptable Java developer driven by a passion for learning and a commitment to excellence. With a growth mindset and positive attitude, I eagerly embrace challenges and strive to deliver impactful solutions. Ready to contribute meaningfully and achieve great results.
+          System Administrator with hands-on experience in managing and supportinglaptops across Windows and Mac environments. Skilled in troubleshooting,remote support, hardware/software setup, and routine maintenance.Experienced in asset and vendor management, documentation, ActiveDirectory, and Office 365 administration. Focused on delivering efficient, user-oriented IT support and minimizing downtime.
         </p>
         
         <div class="social-media">
@@ -102,7 +102,7 @@
             </div>
             <div class="dr2-1">
               <img src="images/icons/java.png" class="ico" />
-              <h3 class="sk">J2EE</h3>
+              <h3 class="sk">Office 365</h3>
             </div>
             <div class="dr2-1">
               <img src="images/icons/sql-60.png" class="ico" />
@@ -111,11 +111,11 @@
 
             <div class="dr2-1">
               <img src="images/icons/mysql-144.png" class="ico" />
-              <h3 class="sk">MySQL</h3>
+              <h3 class="sk">Active Directory</h3>
             </div>
             <div class="dr2-1">
               <img src="images/icons/spring-boot-144.png" class="ico" />
-              <h3 class="sk">Spring</h3>
+              <h3 class="sk">Active Directory</h3>
             </div>
             <div class="dr2-1">
               <img src="images/icons/spring-boot-144.png" class="ico" />
