--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
             <a href="https://github.com/kms003" target="_blank" class="github"><i class="fab fa-github"></i></a>
             <a href="https://leetcode.com/kms003/" class="leetcode" target="_blank"><i class="fa-solid fa-code"></i></a>
             <a href="https://twitter.com/KMSKali003" class="x" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a>
-            <a href="https://instagram.com/kalimuthu___m" class="insta" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+           <!-- <a href="https://instagram.com/kalimuthu___m" class="insta" target="_blank"><i class="fa-brands fa-instagram"></i></a> -->
             
           </div>
         </div>
-        <a href="https://drive.google.com/file/d/136Cj5M8tV8lewDmHzqhEpZNsYCMrZDgK/view?usp=sharing" class="btn" target="_blank">View Resume</a>
+        <a href="https://drive.google.com/file/d/1Ldki_9hGv9EXB-5EyoTIZdH5rga79h6y/view?usp=sharing" class="btn" target="_blank">View Resume</a>
       </div>
       <div class="home-img">
         <img src="images/K-profiledp.jpg" alt="profiledp" />
@@ -345,7 +345,7 @@
 
         <div class="checkpoint">
           <div>
-            <h2 class="role"><span>Crouwd Beta Testing</span></h2>
+            <h2 class="role"><span>Crowd Beta Testing</span></h2>
             <h3 class="company">
               Fire Flink
             </h3>
@@ -512,10 +512,8 @@
           <a href="https://www.linkedin.com/in/kalimuthu-m" class="linkedIn" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
           <a href="https://github.com/kms003" class="github" target="_blank"><i class="fab fa-github"></i></a>
           <a href="https://leetcode.com/kms003/" class="leetcode" target="_blank"><i class="fa-solid fa-code"></i></a>
-          <a href="https://twitter.com/KMSKali003" class="x" target="_blank"
-            ><i class="fa-brands fa-square-x-twitter"></i
-          ></a>
-          <a href="https://instagram.com/kalimuthu___m" class="insta" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://twitter.com/KMSKali003" class="x" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a>
+          <!-- <a href="https://instagram.com/kalimuthu___m" class="insta" target="_blank"><i class="fa-brands fa-instagram"></i></a> -->
          
         </div>
       </div>
