did some changes.

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
           <div>
             <h2 class="role"><span>System Admin</span></h2>
             <h3 class="company">
-              Derivative IT Services Private Limited, Bangalore.
+              Derivative IT Solutions Pvt Ltd - Aster DM Healthcare Bangalore.
             </h3>
             <h3 class="year">Jul 2024 - Present</h3>
             <p class="ex-skills">
@@ -215,7 +215,7 @@
           <div>
             <h2 class="role"><span>Technical Support Executive</span></h2>
             <h3 class="company">
-              Derivative IT Services Private Limited, Bangalore.
+              Derivative IT Solutions Pvt Ltd - Aster DM Healthcare Bangalore.
             </h3>
             <h3 class="year">Jul 2022 - Mar 2023</h3>
             <p class="ex-skills">
@@ -518,7 +518,7 @@
         </div>
       </div>
       <div class="footer-text">
-        <p> &copy; 2024 by Kalimuthu | All Rights Reserved.</p>
+        <p> &copy; 202g by Kalimuthu | All Rights Reserved.</p>
       </div>
       <div class="footer-iconTop">
         <a href="#home"><i class="fa-solid fa-angle-up"></i></a>
