--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
         </div>
       </div>
       <div class="footer-text">
-        <p> &copy; 202g by Kalimuthu | All Rights Reserved.</p>
+        <p> &copy; 2025 by Kalimuthu | All Rights Reserved.</p>
       </div>
       <div class="footer-iconTop">
         <a href="#home"><i class="fa-solid fa-angle-up"></i></a>
